data/derived/comb/progs/unify/prog0108.ml.out
Characters 61-70:
  | h::t -> (h*h) + (sqsum t);;
                    ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
